fix: nav align to start

--- a/assets/collection-navigation.css
+++ b/assets/collection-navigation.css
@@ -1,6 +1,6 @@
 .collection-navigation {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .collection-navigation__item {
